Lightbox -stop word-break on field labels

--- a/portal2/src/main/webapp/themes/default/css/lightbox.css
+++ b/portal2/src/main/webapp/themes/default/css/lightbox.css
@@ -69,7 +69,7 @@ iframe#lightbox_image{
 	overflow:	hidden;		
 }
 
-#lightbox_info li{
+#lightbox_info li strong{
 	word-wrap:	normal;
 }
 	
